--- a/flutter_application_1/pubspec.yaml
+++ b/flutter_application_1/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0 
   hive_generator: ^2.0.1
-  build_runner: ^2.4.12   
+  build_runner: ^2.4.12 
+  provider: ^6.0.0  
 
 
   # The following adds the Cupertino Icons font to your application.
